# mashgate-public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: ci.yml
contracts-sync/manifests/: active.yaml
contracts-sync/scripts/: sync.sh
docs/: best-practices.md  compatibility-matrix.md
docs/getting-started/: go.md  python.md  typescript.md
docs/guides/: building-a-vertical.md  data-modeling-and-identity.md
docs/migration/: from-handrolled-clients.md
docs/modules/: auth-identity.md  billing-subscriptions.md  chat.md  events-webhooks.md  flags-observability.md  kyc-compliance.md  notifications.md  payments-checkout.md  service-catalog.md  storage.md  wallets-ledger.md
docs/recipes/: kyc-gate-18plus.md  monetization-subscriptions-and-boosts.md
examples/go/: README.md  go.mod  main.go
examples/python/: quickstart.py  requirements.txt
examples/typescript/: .env.example  README.md  (+4 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/mashgate/: __init__.py  client.py  errors.py  events.py  webhooks.py
sdk/python/mashgate/resources/: analytics.py  auth.py  billing.py  chain.py  chat.py  checkout.py  developer.py  flags.py  guard.py  iam.py  invoices.py  local_payments.py  logs.py  mail.py  metering.py  notify.py  payment_links.py  payments.py  risk.py  settings.py  storage.py  subscriptions.py  wallet.py  wallet_admin.py  webhooks.py
sdk/python/tests/: test_billing.py  test_client_parity.py  test_wallet_admin.py  test_webhooks.py
(+96 files in other folders)
