[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mashgate"
version = "0.2.0"
description = "Python SDK for the Mashgate Payment Gateway"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "respx>=0.21"]
